--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -144,7 +144,8 @@
     .inner {
         width: 100%;
         // max-width: 1384px;
-        height: 632px;
+        height: auto;
+        min-height: 632px;
         background-color: #fff;
         border: 1px solid #ccc;
         border-radius: 12px;
@@ -282,8 +283,8 @@
         }
 
         @media (max-width: 1080px) {
-            input,
-            select,
+            .inputBox,
+            .selectBox,
             button {
                 width: 100%;
                 height: 56px;
@@ -293,17 +294,132 @@
     .jobData {
         width: 100%;
         // max-width: 1336px;
-        height: 458px;
+        height: auto;
+        min-height: 458px;
         border-radius: 4px;
-        border: 1px solid #ccc;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         .noData {
             font-size: 16px;
             font-weight: 400;
             line-height: 1.25;
             color: #999999;
+        }
+    }
+}
+
+.jobList {
+    .jobBox {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 18px;
+        @media (max-width: 1080px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+        @media (max-width: 768px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+    .jobItem {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        border: 1px solid #ccc;
+        padding: 16px;
+        border-radius: 6px;
+        transition: box-shadow 0.5s ease;
+        cursor: pointer;
+        &:hover {
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.35);
+        }
+
+        .companyName {
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 1.25;
+            color: #4d4d4d;
+        }
+        .information {
+            display: flex;
+            gap: 8px;
+            flex-direction: column;
+            justify-content: space-between;
+            img {
+                width: 18px;
+                height: 18px;
+            }
+            p {
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 1.25;
+                color: #808080;
+            }
+            .title,
+            .education,
+            .salary {
+                display: flex;
+                align-items: center;
+                gap: 6px;
+            }
+        }
+
+        .content {
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 1.25;
+            color: #4d4d4d;
+            //ellipsis
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            line-clamp: 2;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+
+        .detailBtn {
+            margin: 0 auto;
+            a {
+                color: #ee8927;
+                font-size: 14px;
+                font-weight: 700;
+                line-height: 1.25;
+            }
+        }
+    }
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    li {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        cursor: pointer;
+        color: #4d4d4d;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.25;
+        transition: background-color 0.5s ease;
+
+        &.active {
+            background-color: #e6e6e6;
+        }
+    }
+    .prev,
+    .next {
+        opacity: 0.7;
+        transition: opacity 0.5s ease;
+        &:hover:not(.disabled) {
+            opacity: 1;
+        }
+        &.disabled {
+            opacity: 0.3;
+            cursor: not-allowed;
         }
     }
 }
