--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -337,6 +337,7 @@
             line-height: 1.25;
             color: #4d4d4d;
         }
+
         .information {
             display: flex;
             gap: 8px;
@@ -421,5 +422,160 @@
             opacity: 0.3;
             cursor: not-allowed;
         }
+    }
+}
+
+.popUpArea {
+    background-color: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    visibility: hidden;
+    clip-path: inset(0 0 100% 0);
+    transition:
+        visibility 0.3s ease-in-out,
+        background-color 0.3s ease-in-out,
+        clip-path 0.3s ease-in-out;
+
+    &.visible {
+        visibility: visible;
+        background-color: rgba(#4d4d4d, 0.5);
+        clip-path: inset(0 0 0 0);
+        // popUpBox 延遲
+        .popUpBox {
+            opacity: 1;
+            transition:
+                opacity 0.3s ease-in-out 0.5s,
+                transform 0.3s ease-in-out 0.5s; 
+        }
+    }
+
+    .popUpBox {
+        width: 100%;
+        height: 100%;
+        max-width: 750px;
+        max-height: 768px;
+        background-color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        box-shadow: 0px 11px 15px -7px #00000033;
+        box-shadow: 0px 24px 38px 3px #00000024;
+        box-shadow: 0px 9px 46px 8px #0000001f;
+        border-radius: 4px;
+        padding: 16px 24px;
+        opacity: 0; 
+        transform: translate(-50%, -50%);
+        &::before {
+            content: "";
+            position: absolute;
+            top: 62px;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: #cccccc;
+        }
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 52px;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: #cccccc;
+        }
+    }
+
+    .popUpTitle {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1.25;
+        color: #4d4d4d;
+        // position: relative;
+    }
+
+    .popUpContent {
+        padding-top: 40px;
+        .jobTitle {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+        }
+        .companyName {
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 1.25;
+            color: #4d4d4d;
+        }
+        .title {
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 1.25;
+            color: #4d4d4d;
+        }
+        .album {
+            width: 100%;
+            overflow: hidden;
+            margin-top: 24px;
+            margin-bottom: 18px;
+            .albumBox {
+                display: flex;
+                gap: 8px;
+            }
+            .processBox {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                margin-top: 10px;
+
+                .process {
+                    display: flex;
+                    gap: 8px;
+                    .dot {
+                        width: 6px;
+                        height: 6px;
+                        border-radius: 18px;
+                        background-color: #ccc;
+                        &.active {
+                            width: 24px;
+                            background-color: #ee8927;
+                        }
+                    }
+                }
+            }
+        }
+        .jobContent {
+            span {
+                font-size: 20px;
+                font-weight: 700;
+                line-height: 1.25;
+                color: #333333;
+                margin-bottom: 8px;
+            }
+            .content {
+                padding-bottom: 16px;
+                height: 366px;
+                overflow-y: auto;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 1.25;
+                color: #808080;
+            }
+        }
+    }
+
+    .popUpClose {
+        padding: 8px 11px;
+        position: absolute;
+        bottom: 8px;
+        right: 11px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.25;
+        color: #4d4d4d;
     }
 }
