--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -23,29 +23,53 @@
 
     .logoBox {
         position: absolute;
+        z-index: 2;
         top: 350px;
         right: 83px;
         width: 100%;
         height: 100%;
         min-width: 137px;
         max-width: 540px;
+        animation: logoAnimation 1.5s infinite ease-in-out;
 
+        @media (max-width: 1400px) {
+            max-width: 300px;
+            right: 30px;
+        }
+        @media (max-width: 1080px) {
+            right: 11px;
+            top: 35.46vw; //133px
+        }   
+        @media (max-width: 575px) {
+            max-width: 137px;
+        }
         img {
             width: 100%;
             height: auto;
         }
 
-        :nth-child(1) {
+        a:nth-child(1) {
             display: flex;
             @media (max-width: 1080px) {
                 display: none;
             }
         }
 
-        :nth-child(2) {
+        a:nth-child(2) {
             display: none;
             @media (max-width: 1080px) {
                 display: flex;
+            }
+        }
+        @keyframes logoAnimation {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.02);
+            }
+            100% {
+                transform: scale(1);
             }
         }
     }
@@ -84,27 +108,40 @@
             height: 100%;
             object-fit: contain;
         }
-        .eyeBox {
+        #eyeScene {
             position: absolute;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
             z-index: 2;
-        }
-        .leftEye {
-            position: absolute;
-            top: 307px;
-            left: 582px;
-            z-index: 2;
-            width: 40px;
-            height: 32px;
-        }
-        .rightEye {
-            position: absolute;
-            top: 302px;
-            left: 729px;
-            z-index: 2;
-            width: 40px;
-            height: 32px;
+            pointer-events: none;
+
+            > div {
+                position: relative;
+                width: 100%;
+                height: 100%;
+            }
+
+            .leftEye {
+                position: absolute;
+                top: 307px;
+                left: 582px;
+                z-index: 2;
+                width: 40px;
+                height: 32px;
+                transition: transform 0.1s ease-out;
+            }
+
+            .rightEye {
+                position: absolute;
+                top: 302px;
+                left: 729px;
+                z-index: 2;
+                width: 40px;
+                height: 32px;
+                transition: transform 0.1s ease-out;
+            }
         }
         .characterMobile {
             position: absolute;
@@ -330,6 +367,11 @@
         &:hover {
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.35);
         }
+        @media (max-width: 1080px) {
+            &:hover {
+                box-shadow: none;
+            }
+        }
 
         .companyName {
             font-size: 24px;
@@ -449,7 +491,7 @@
             opacity: 1;
             transition:
                 opacity 0.3s ease-in-out 0.5s,
-                transform 0.3s ease-in-out 0.5s; 
+                transform 0.3s ease-in-out 0.5s;
         }
     }
 
@@ -467,7 +509,7 @@
         box-shadow: 0px 9px 46px 8px #0000001f;
         border-radius: 4px;
         padding: 16px 24px;
-        opacity: 0; 
+        opacity: 0;
         transform: translate(-50%, -50%);
         &::before {
             content: "";
@@ -487,6 +529,9 @@
             height: 1px;
             background-color: #cccccc;
         }
+        @media (max-width: 750px) {
+            width: 88.26vw;
+        }
     }
 
     .popUpTitle {
@@ -503,6 +548,10 @@
             display: flex;
             gap: 8px;
             align-items: center;
+            @media (max-width: 1080px) {
+                align-items: flex-start;
+                flex-direction: column;
+            }
         }
         .companyName {
             font-size: 24px;
@@ -533,12 +582,15 @@
 
                 .process {
                     display: flex;
+                    justify-content: center;
                     gap: 8px;
                     .dot {
                         width: 6px;
                         height: 6px;
                         border-radius: 18px;
                         background-color: #ccc;
+                        transition: width 0.5s ease;
+                        cursor: pointer;
                         &.active {
                             width: 24px;
                             background-color: #ee8927;
@@ -563,6 +615,12 @@
                 font-weight: 400;
                 line-height: 1.25;
                 color: #808080;
+                @media (max-width: 1024px) {
+                    height: 332px;
+                }
+                @media (max-width: 380px) {
+                    height: 247px;
+                }
             }
         }
     }
